--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,6 @@ workflows:
     scripts:
       - name: Build APK
         script: |
-          ./gradlew assembleDebug
+          gradle assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
