--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,19 @@
-plugins {
-    id 'com.android.application' version '8.1.0' apply false
+// build.gradle (projeto raiz)
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.1'  // versão do plugin do Android (ajuste se quiser)
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
 task clean(type: Delete) {
