--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,11 @@
 workflows:
-  build-android:
-    name: Build Android APK
-    max_build_duration: 20
+  build:
+    name: Build APK
+    environment:
+      vars:
+        ANDROID_SDK_ROOT: /opt/android-sdk
     scripts:
       - name: Build APK
-        script: |
-          gradle assembleDebug
+        script: ./gradlew assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
