--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android' // se estiver usando Kotlin
 }
 
 android {
@@ -24,12 +25,9 @@ android {
     }
 }
 
-// IMPORTANTE: Repositórios onde o Gradle vai procurar as dependências
 repositories {
     google()
     mavenCentral()
-    // Repositório do Shizuku:
-    maven { url "https://rikka.oss.moe/repository/maven/" }
 }
 
 dependencies {
@@ -38,7 +36,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'rikka.shizuku:api:14.0.0'
+    implementation 'rikka.shizuku:api:14.0.0' // API do Shizuku, importante
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
