--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,12 +1,12 @@
 workflows:
   build-android:
     name: Build Android APK
+    max_build_duration: 15
     environment:
-      sdk: 33
-      java: 17
+      vars:
+        PACKAGE_NAME: "com.gzimhub.wallhackinjectshizuku"
     scripts:
       - name: Build APK
-        script: |
-          ./gradlew assembleDebug
+        script: ./gradlew assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
