--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,14 +1,12 @@
 workflows:
   build-android:
-    name: Build Android APK
-    max_build_duration: 15
+    name: Build APK
     environment:
-      vars:
-        PACKAGE_NAME: "com.gzimhub.wallhackinjectshizuku"
+      android: true
     scripts:
       - name: Give execute permission to gradlew
         script: chmod +x ./gradlew
-      - name: Build APK
+      - name: Build Debug APK
         script: ./gradlew assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
