--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,12 +1,14 @@
 workflows:
-  build-android:
-    name: Build APK
+  android-app:
+    name: Build Android APK
+    max_build_duration: 60
     environment:
-      sdk: 31
+      vars:
+        JAVA_HOME: /opt/java/openjdk
     scripts:
-      - name: Give execute permission to gradlew
+      - name: Set execute permission for gradlew
         script: chmod +x ./gradlew
       - name: Build Debug APK
         script: ./gradlew assembleDebug
     artifacts:
-      - app/build/outputs/**/*.apk
+      - app/build/outputs/apk/debug/app-debug.apk
