--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,9 +2,7 @@ workflows:
   android-app:
     name: Build Android APK
     max_build_duration: 60
-    environment:
-      vars:
-        JAVA_HOME: /opt/java/openjdk
+    environment: {}
     scripts:
       - name: Set execute permission for gradlew
         script: chmod +x ./gradlew
