--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,12 +1,12 @@
 workflows:
-  android-app:
+  build-android:
     name: Build Android APK
-    max_build_duration: 60
-    environment: {}
+    environment:
+      android: true
     scripts:
-      - name: Set execute permission for gradlew
-        script: chmod +x ./gradlew
       - name: Build Debug APK
-        script: ./gradlew assembleDebug
+        script: |
+          cd App
+          gradle assembleDebug
     artifacts:
-      - app/build/outputs/apk/debug/app-debug.apk
+      - App/app/build/outputs/**/*.apk
