--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,38 +1,32 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android' // Se você usa Kotlin, senão remova essa linha
+    id 'org.jetbrains.kotlin.android' version '1.9.0'
 }
 
 android {
-    namespace 'com.gzimhub.wallhackinjectshizuku'
-    compileSdk 34
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.gzimhub.wallhackinjectshizuku"
-        minSdk 23
-        targetSdk 34
+        minSdk 21
+        targetSdk 33
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            // Para build release sem assinatura (debug)
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
-dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+repositories {
+    google()
+    mavenCentral()
+}
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
 }
